src/test/c/accept/10-homekit.ms
team Argentina{
    homekit {
		Photo: http://foto.google.com/homekit.png;
	}
}