src/test/c/reject/08-repeated-attr.ms
player Angel Di Maria {
    Birthdate: 14/2/1988;
    Height: 1.78;
    Weight: 75;
    Team: Sport Lisboa e Benfica;
    Photo: http://foto.google.com/dimaria.png;
    Birthdate: 14/2/1988; // repeated attribute
}